--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,36 @@ body {
   .App {
     text-align: center;
   }
+
+  app-leaflet-map{
+    // height:calc(100%);
+    height: 100vh;
+  }
+
+  .push {
+    // position: absolute;
+    // bottom: 50px;
+    height: calc(100vh - 150px);
+
+  }
+
+  app-navigation  {
+    width: 100%;
+    // height: 100px;
+    
+    // position: sticky;
+    
+    // position: absolute;
+    
+    // margin-top: calc(100% - 50px);
+    height: 100px;
+    // bottom: 0px;
+    // top: calc(100% - 50px);
+    // background-color: red;
+    left: 0px;
+    z-index: 50000012874512329875491;
+  }
+
+  // .App{
+  //   background: url(https://world-clicker.com/assets/background.png) center center/cover;
+  // }
